# AimeDF

./: .gitignore  Seiboth_Fig4  pyproject.toml
bash/: A14.slurm  job.slurm
bash/.ipynb_checkpoints/: job-checkpoint.slurm
notebooks/: 1st_conv_test.ipynb  Bayesian_main.ipynb  Botorch_1param.ipynb  Botorch_MultiParam.ipynb  Botorch_Optimization.ipynb  Botorch_Shadow_Optimization.ipynb  Botorch_optim.ipynb  Cross_check.ipynb  DF_side.ipynb  Fig_show.ipynb  bash_config.py  bayes_opt_results.csv
notebooks/.ipynb_checkpoints/: Bayesian_main-checkpoint.ipynb  Botorch_MultiParam-checkpoint.ipynb  DF_side-checkpoint.ipynb  Fig_show-checkpoint.ipynb  Main_DF_analysis-checkpoint.ipynb
src/darkfield/: A14_mod.py  dfdf_Aime.py  diffra_comp.py  diffra_pooyan.py  diffra_v2.py  diffra_v2_16juin_9h12.py  diffra_v2_backup_14juin_22h50.py  show_fig.py
src/darkfield.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
yamls/: 33j.yaml  42_10_all-20-2.yaml  5438.yaml  5438_2.yaml  5438_Paper_serrated.yaml  BO_1.yaml  BO_10.yaml  BO_11.yaml  BO_12.yaml  BO_13.yaml  BO_14.yaml  BO_15.yaml  BO_16.yaml  BO_17.yaml  BO_18.yaml  BO_19.yaml  BO_2.yaml  BO_20.yaml  BO_21.yaml  BO_22.yaml  BO_23.yaml  BO_24.yaml  BO_25.yaml  BO_26.yaml  BO_27.yaml  BO_28.yaml  BO_29.yaml  BO_3.yaml  BO_30.yaml  BO_31.yaml  BO_32.yaml  BO_33.yaml  BO_34.yaml  BO_35.yaml  BO_36.yaml  BO_37.yaml  BO_38.yaml  BO_39.yaml  BO_4.yaml  BO_40.yaml  (+204 more)
yamls/.ipynb_checkpoints/: 33j_factor-015_02in-0_Om-05_Am-05_def-20-2-checkpoint.yaml  42_11_none-checkpoint.yaml  5438_1-checkpoint.yaml  LP_2-checkpoint.yaml  (+80 more)
(+11 files in other folders)
